# emulationuniverse

./: CMakeLists.txt  FINAL_BUILD_REPORT.md  README.md  package-lock.json  package.json  restore-seagate-disk.ps1
debug-scripts/: boot_trace.dbg  break_vblank.dbg  pokemon_red_profile.dbg  trace_with_include.dbg
debug-scripts/common/: baseline.dbg
src/: extension.ts
src/emulator/: GameBoy.cpp  GameBoy.hpp  main.cpp
src/emulator/apu/: APU.cpp  APU.hpp
src/emulator/cartridge/: Cartridge.cpp  Cartridge.hpp
src/emulator/cartridge/mbc/: IMBC.hpp  MBC0.hpp  MBC1.hpp  MBC2.hpp  MBC3.hpp  MBC5.hpp
src/emulator/core/: Types.hpp
src/emulator/core/interfaces/: ICPU.hpp  IComponent.hpp  IDisplay.hpp  IJoypad.hpp  IMemory.hpp
src/emulator/cpu/: CPU.cpp  CPU.hpp  Opcodes.cpp  Registers.hpp
src/emulator/debug/: Debugger.cpp  Debugger.hpp
src/emulator/joypad/: Joypad.cpp  Joypad.hpp
src/emulator/memory/: MMU.cpp  MMU.hpp
src/emulator/ppu/: PPU.cpp  PPU.hpp
src/emulator/savestate/: SaveState.cpp  SaveState.hpp
src/emulator/timer/: Timer.cpp  Timer.hpp
src/frontend/: SDL2Audio.cpp  SDL2Audio.hpp  SDL2Display.cpp  SDL2Display.hpp  SDL2Input.cpp  SDL2Input.hpp
tests/: CMakeLists.txt  CpuMicroTests.cpp  Generate-CpuMicroDashboard.ps1  Generate-RomSuiteDashboard.ps1  Import-RomSuiteAssets.ps1  SystemRomTests.cpp  Update-CpuMicroTrend.ps1  Update-RomSuiteTrend.ps1  Validate-RomSuiteAssets.ps1  rom_manifest.csv  rom_manifest_focus_ppu.csv
tests/logs/: cpu_micro_dashboard.md  cpu_micro_history.json  cpu_micro_results.csv  cpu_micro_summary.json  cpu_micro_trend.md  rom_assets_import.json  rom_assets_import.md  rom_assets_readiness.json  rom_assets_readiness.md  rom_suite_dashboard.md  rom_suite_history.json  rom_suite_results.csv  rom_suite_summary.json  rom_suite_trend.md
